[gd_scene load_steps=10 format=3 uid="uid://cytcy0uo72e4e"]

[ext_resource type="Script" path="res://items/pickup/pickup.gd" id="1_1tu4r"]
[ext_resource type="PackedScene" uid="uid://cn6cqf74752r3" path="res://items/gun/test_gun.tscn" id="2_t0ag4"]
[ext_resource type="Shader" path="res://shaders/PickUpCamera.gdshader" id="3_fhuol"]
[ext_resource type="Script" path="res://items/item_camera.gd" id="4_5gkws"]

[sub_resource type="SphereShape3D" id="SphereShape3D_r5keq"]

[sub_resource type="ViewportTexture" id="ViewportTexture_d3bjr"]
viewport_path = NodePath("ItemViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rkmaj"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_fhuol")
shader_parameter/ItemCam = SubResource("ViewportTexture_d3bjr")

[sub_resource type="QuadMesh" id="QuadMesh_e6hfi"]
size = Vector2(2, 2)

[sub_resource type="Environment" id="Environment_jngn5"]
ambient_light_source = 2
ambient_light_color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="Pickup" type="Area3D"]
script = ExtResource("1_1tu4r")
item = ExtResource("2_t0ag4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.243756, 0)
shape = SubResource("SphereShape3D_r5keq")

[node name="ItemBillboard" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.243756, 0)
material_override = SubResource("ShaderMaterial_rkmaj")
mesh = SubResource("QuadMesh_e6hfi")

[node name="ItemViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4294443006
size = Vector2i(100, 100)

[node name="ItemCamera" type="Camera3D" parent="ItemViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
cull_mask = 262144
environment = SubResource("Environment_jngn5")
projection = 1
far = 2.0
script = ExtResource("4_5gkws")

[node name="Item" type="Node3D" parent="ItemViewport/ItemCamera"]
transform = Transform3D(-4.12147, 0, 6.26606, 0, 7.5, 0, -6.26606, 0, -4.12147, 0, 0, -1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
